--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>PayerEdge — VSP Bundles (v10.4)</title>
+<title>PayerEdge — VSP Bundles (v11)</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <style>
   :root{--bg:#0b0f14;--fg:#e7eefc;--muted:#9fb0c9;--card:#101722;--line:#233044;--ok:#10b981}
@@ -37,7 +37,7 @@
       <div class="meta">Scoreboard shows <b>patient copay</b> and <b>service fee</b> (Copay − Holdback). Sun choices are exclusive.</div>
     </div>
     <div style="display:flex;gap:8px;align-items:center">
-      <span class="meta">plan=<b>VSP_choice</b> • version=<b>v10.4</b> • source=<span id="src" class="muted">…</span></span>
+      <span class="meta">plan=<b>VSP_choice</b> • version=<b>v11</b> • source=<span id="src" class="muted">…</span></span>
       <button class="btn" id="refresh">Force Refresh</button>
       <button class="btn" id="clear">Clear Cache</button>
     </div>
@@ -80,39 +80,22 @@
     /***************
      * CONFIG/VERS *
      ***************/
-    const CSV_PATH = "./data/vsp_choice_master_v8_from_patched.csv";
+    const CSV_PATH = "./data/vsp_choice_master_v8_from_patched.csv"; // change if your path differs
     document.getElementById("src").textContent = CSV_PATH;
-    const CACHE_KEY = "vsp_v10_4_cache";
+    const CACHE_KEY = "vsp_choice_v11";
 
-    // Authoritative Digital Aspheric pricing from your table
-    const MAP = {
-      SV:{
-        "BA":    {cb:24,sf:21,base:45,add:0, allow:true},
-        "BA+BB": {cb:16,sf:12,base:45,add:28,allow:true},
-        "BA+BH": {cb:37,sf:21,base:45,add:58,allow:true},  // ✅ 45+58 = 103
-        "BA+BJ": {cb:57,sf:29,base:45,add:86,allow:true},
-        "BA+BD": {cb:10,sf: 0,base:45,add:10,allow:true}
-      },
-      MF:{
-        "BA":    {cb:34,sf:21,base:55,add:0, allow:true},
-        "BA+BB": {cb:16,sf:12,base:55,add:28,allow:true},
-        "BA+BH": {cb:40,sf:28,base:55,add:68,allow:true},
-        "BA+BJ": {cb:null,sf:null,base:null,add:null,allow:false},
-        "BA+BD": {cb:10,sf: 0,base:55,add:10,allow:true}
-      }
-    };
-
-    // Scoreboard recipe (4 cards)
-    const RECIPE = fam => ([
-      {key:"Hi67",  pair:"BA+BH", title:"Hi67"},
-      {key:"Mid",   pair:"BA+BB", title:"Mid"},
-      {key:"Poly",  pair:"BA+BD", title:"Poly"},
-      {key:"CR",    pair:null,    title:"CR"}
-    ]);
+    // Cards we render
+    const CARDS = [
+      {key:"Hi67", pair:"BA+BH", title:"Hi67"},
+      {key:"Mid",  pair:"BA+BB", title:"Mid"},
+      {key:"Poly", pair:"BA+BD", title:"Poly"},
+      {key:"CR",   pair:null,    title:"CR"}
+    ];
 
     const $cards = document.getElementById("cards");
     const $meta  = document.getElementById("meta");
     const $net   = document.getElementById("net");
+
     const money = n => `$${Number(n||0).toFixed(2).replace(/\.00$/,"")}`;
     const num   = v => v==null||v==="" ? null : Number(String(v).replace(/[^\d.-]/g,""));
 
@@ -129,29 +112,40 @@
     function norm(row){
       const r = Object.fromEntries(Object.entries(row).map(([k,v])=>[String(k).trim().toLowerCase(), typeof v==="string"?v.trim():v]));
       return {
-        item: r.item || r.category || r.lens || "",
+        group: r.group||"",
+        enhancement: r.enhancement||"",
         code: (r.code || r.codes || "").toUpperCase(),
-        family: (r.family || r.lens_family || r.type || "").toUpperCase().includes("MF") ? "MF" : "SV",
-        copay: num(r.copay || r.patient_copay),
-        holdback: num(r.holdback || r.chargeback || r.charge_back),
-        serviceFee: num(r.service_fee || r.servicefee || r.fee)
+        notes: r.notes||"",
+        copay_raw: r.copay||"",
+        vsp: num(r.vsp),
+        chargeback: num(String(r.chargeback||"").replace("$","")),
+        applies_to: r.applies_to||"",
+        chargeback_split: r.chargeback_split||""
       };
     }
-    function indexRows(rows){
-      const idx = {SV:{}, MF:{}};
-      for (const r of rows){
-        const f = (r.family==="MF") ? "MF" : "SV";
-        if (!idx[f][r.code]) idx[f][r.code] = [];
-        idx[f][r.code].push(r);
-      }
-      return idx;
+
+    function parseAddFromNotes(notes){
+      // e.g., "Copay = 45+28 (SV) / 55+28 (MF)"
+      const m = /Copay\s*=\s*45\+(\d+)\s*\(SV\)\s*\/\s*55\+(\d+)\s*\(MF\)/i.exec(notes||"");
+      if (!m) return null;
+      return {sv_add: Number(m[1]), mf_add: Number(m[2])};
     }
+
+    function indexRows(rows){
+      const byCode = {};
+      for (const r of rows){
+        if (!r.code) continue;
+        (byCode[r.code] ||= []).push(r);
+      }
+      return byCode;
+    }
+
     async function loadCsv(){
-      const cache = sessionStorage.getItem(CACHE_KEY);
-      if (cache){
-        const {rows, when} = JSON.parse(cache);
+      const cached = sessionStorage.getItem(CACHE_KEY);
+      if (cached){
+        const {rows, when} = JSON.parse(cached);
         $meta.textContent = `rows=${rows.length} • cache ${(new Date(when)).toLocaleTimeString()}`;
-        return rows;
+        return rows.map(norm);
       }
       try{
         const res = await fetch(CSV_PATH, {cache:"no-store"});
@@ -159,7 +153,7 @@
         const text = await res.text();
         const parsed = Papa.parse(text, {header:true, skipEmptyLines:true});
         const rows = parsed.data.map(norm);
-        sessionStorage.setItem(CACHE_KEY, JSON.stringify({rows, when:Date.now()}));
+        sessionStorage.setItem(CACHE_KEY, JSON.stringify({rows: parsed.data, when: Date.now()}));
         $meta.textContent = `rows=${rows.length} • fresh`;
         return rows;
       }catch(e){
@@ -168,8 +162,9 @@
         const c2 = sessionStorage.getItem(CACHE_KEY);
         if (c2){
           const {rows} = JSON.parse(c2);
-          $meta.textContent = `rows=${rows.length} • cache (offline)`;
-          return rows;
+          const r2 = rows.map(norm);
+          $meta.textContent = `rows=${r2.length} • cache (offline)`;
+          return r2;
         }
         $meta.textContent = "rows=0 • offline";
         return [];
@@ -179,56 +174,80 @@
     /*****************
      * PRICING LOGIC *
      *****************/
-    // Pair line from authoritative map (no BA double-count)
-    function mapPair(fam, pairKey){
-      const rec = MAP[fam][pairKey];
-      if (!rec || rec.allow===false) return null;
-      return {
-        item: "Digital Aspheric",
-        code: pairKey,
-        copay: (rec.base||0)+(rec.add||0),
-        holdback: rec.cb||0,
-        serviceFee: rec.sf||0,
-        source: "map"
-      };
-    }
-    // Informational breakdown (BA and add code) — NOT included in totals
-    function mapInfoRows(fam, pairKey){
-      const rec = MAP[fam][pairKey];
-      if (!rec || rec.allow===false) return [];
-      const base = MAP[fam]["BA"];
-      const addonCode = pairKey.split("+")[1]; // "BH" | "BB" | "BD"
-      const addRec = rec;
-      return [
-        { code:"BA",       copay:(base.base||0)+(base.add||0), holdback:base.cb||0,   serviceFee:base.sf||0 },
-        { code:addonCode,  copay:(addRec.base||0)+(addRec.add||0), holdback:addRec.cb||0, serviceFee:addRec.sf||0 }
-      ];
-    }
-    function fromCsv(idx, fam, code){
-      const list = idx[fam][code] || [];
-      if (!list.length) return null;
-      const best = list.find(r=>r.copay!=null && r.holdback!=null && r.serviceFee!=null) || list[0];
-      return { item: best.item||"", code, copay: best.copay||0, holdback: best.holdback||0, serviceFee: best.serviceFee||0, source:"csv" };
+    // Pick the BA base (SV=$45/$24/$21, MF=$55/$34/$21)
+    function baseBA(byCode, fam){
+      const baRows = (byCode["BA"]||[]);
+      // choose by $45 or $55 in copay_raw
+      let row = baRows.find(r=>/^\$?45\b/.test(String(r.copay_raw))) || baRows[0];
+      if (fam==="MF") row = baRows.find(r=>/^\$?55\b/.test(String(r.copay_raw))) || row;
+      return { item:"Digital Aspheric", code:"BA", copay: num(String(row.copay_raw).replace("$","")), holdback: row.chargeback||0, serviceFee: row.vsp||0, source:"csv"};
     }
 
-    const moneyFmt = n => `$${Number(n||0).toFixed(2).replace(/\.00$/,"")}`;
+    // Compute BA+* pair totals straight from CSV semantics
+    function pairFromCsv(byCode, pairCode, fam){
+      const rows = (byCode[pairCode]||[]);
+      if (!rows.length) return null;
+
+      // parse add values from notes (authoritative)
+      const addInfo = parseAddFromNotes(rows[0].notes);
+      // fallback for BA+BJ which is SV-only and lacks MF part
+      if (!addInfo && pairCode==="BA+BJ"){
+        const r = rows[0];
+        const m = /45\s*\+\s*(\d+)/.exec(String(r.copay_raw));
+        const sv = 45 + (m ? Number(m[1]) : 0);
+        return { item:"Digital Aspheric", code:pairCode, copay: sv, holdback: r.chargeback||0, serviceFee: r.vsp||0, source:"csv" };
+      }
+
+      const svTotal = 45 + addInfo.sv_add;
+      const mfTotal = 55 + addInfo.mf_add;
+
+      // choose the row whose "45 + X" second term matches our fam (CSV encodes MF as 45 + (mf_add+10))
+      const second = s => { const m=/\+\s*(\d+)/.exec(String(s)); return m?Number(m[1]):null; };
+      const svRow = rows.find(r => second(r.copay_raw)===addInfo.sv_add) || rows[0];
+      const mfRow = rows.find(r => second(r.copay_raw)===(addInfo.mf_add+10)) || rows[rows.length-1];
+
+      const picked = (fam==="SV") ? svRow : mfRow;
+      const total  = (fam==="SV") ? svTotal : mfTotal;
+
+      return { item:"Digital Aspheric", code:pairCode, copay: total, holdback: picked.chargeback||0, serviceFee: picked.vsp||0, source:"csv" };
+    }
+
+    // CR / AA and AR / QM (from CSV)
+    function codeFromCsv(byCode, fam, code){
+      const rows = (byCode[code]||[]);
+      if (!rows.length) return null;
+      // AA has two rows ($31 and $35). QM rows are identical, we can pick the first.
+      let row = rows[0];
+      if (code==="AA"){
+        row = (fam==="SV")
+          ? (rows.find(r=>/^\$?31\b/.test(String(r.copay_raw))) || rows[0])
+          : (rows.find(r=>/^\$?35\b/.test(String(r.copay_raw))) || rows[rows.length-1]);
+      }
+      return { item: code==="QM" ? "A/R" : "CR", code, copay: num(String(row.copay_raw).replace("$","")), holdback: row.chargeback||0, serviceFee: row.vsp||0 };
+    }
+
     const sum = (arr,k) => arr.reduce((s,x)=>s+(x[k]||0),0);
 
-    function renderPairCard(title, badge, pairRow, infoRows){
+    function renderPairCard(badge, pair, base, fam){
+      // pair: totals for BA+*, base: BA base row (for quick reference)
+      const infoRows = [
+        { code:"BA",       copay: base.copay, holdback: base.holdback, serviceFee: base.serviceFee },
+        { code: pair.code.split("+")[1], copay: pair.copay, holdback: pair.holdback, serviceFee: pair.serviceFee }
+      ];
       return `
         <div class="card">
-          <h2>${moneyFmt(pairRow.copay)}</h2>
-          <div class="kicker">Patient Copay<br><span class="ok">Service Fee (Practice Profit): ${moneyFmt(pairRow.serviceFee)}</span></div>
+          <h2>${money(pair.copay)}</h2>
+          <div class="kicker">Patient Copay<br><span class="ok">Service Fee (Practice Profit): ${money(pair.serviceFee)}</span></div>
           <div class="meta" style="margin-bottom:6px">${badge}</div>
           <table>
             <thead><tr><th>Item</th><th>Code</th><th class="right">Copay</th><th class="right">Holdback</th><th class="right">Service Fee</th></tr></thead>
             <tbody>
               <tr>
-                <td>${pairRow.item}</td>
-                <td class="muted">${pairRow.code}</td>
-                <td class="right">${moneyFmt(pairRow.copay)}</td>
-                <td class="right">${moneyFmt(pairRow.holdback)}</td>
-                <td class="right">${moneyFmt(pairRow.serviceFee)}</td>
+                <td>${pair.item}</td>
+                <td class="muted">${pair.code}</td>
+                <td class="right">${money(pair.copay)}</td>
+                <td class="right">${money(pair.holdback)}</td>
+                <td class="right">${money(pair.serviceFee)}</td>
               </tr>
             </tbody>
           </table>
@@ -239,83 +258,24 @@
               ${infoRows.map(r=>`
                 <tr>
                   <td class="muted">${r.code}</td>
-                  <td class="right">${moneyFmt(r.copay)}</td>
-                  <td class="right">${moneyFmt(r.holdback)}</td>
-                  <td class="right">${moneyFmt(r.serviceFee)}</td>
+                  <td class="right">${money(r.copay)}</td>
+                  <td class="right">${money(r.holdback)}</td>
+                  <td class="right">${money(r.serviceFee)}</td>
                 </tr>`).join("")}
             </tbody>
           </table>
-        </div>`;
+        </div>
+      `;
     }
-    function renderSimpleCard(title, badge, rows){
+
+    function renderSimpleCardCR(rows){
       const copay = sum(rows,"copay"), hold=sum(rows,"holdback"), fee=sum(rows,"serviceFee");
       return `
         <div class="card">
-          <h2>${moneyFmt(copay)}</h2>
-          <div class="kicker">Patient Copay<br><span class="ok">Service Fee (Practice Profit): ${moneyFmt(fee)}</span></div>
-          <div class="meta" style="margin-bottom:6px">${badge}</div>
+          <h2>${money(copay)}</h2>
+          <div class="kicker">Patient Copay<br><span class="ok">Service Fee (Practice Profit): ${money(fee)}</span></div>
+          <div class="meta" style="margin-bottom:6px">CR</div>
           <table>
             <thead><tr><th>Item</th><th>Code</th><th class="right">Copay</th><th class="right">Holdback</th><th class="right">Service Fee</th></tr></thead>
             <tbody>
-              ${rows.map(r=>`
-                <tr>
-                  <td>${r.item||title}</td>
-                  <td class="muted">${r.code}</td>
-                  <td class="right">${moneyFmt(r.copay)}</td>
-                  <td class="right">${moneyFmt(r.holdback)}</td>
-                  <td class="right">${moneyFmt(r.serviceFee)}</td>
-                </tr>`).join("")}
-              <tr>
-                <td class="muted">Totals</td><td></td>
-                <td class="right"><b>${moneyFmt(copay)}</b></td>
-                <td class="right"><b>${moneyFmt(hold)}</b></td>
-                <td class="right"><b>${moneyFmt(fee)}</b></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>`;
-    }
-
-    /************
-     * PIPELINE *
-     ************/
-    async function run(){
-      const famSel = document.getElementById("lensFamily").value;
-      const fam = famKey(famSel);                 // strict SV/MF normalization
-      const includeAR = document.getElementById("ar").checked;
-
-      const rows = await loadCsv();
-      const idx = indexRows(rows);
-      const plan = RECIPE(fam);
-      const out = [];
-
-      // Three BA bundles (pair totals from map only)
-      for (const r of plan.slice(0,3)){
-        const pair = mapPair(fam, r.pair);
-        const info = mapInfoRows(fam, r.pair);
-        out.push(renderPairCard(r.title, r.key, pair, info));
-      }
-
-      // CR: AA always; QM only if Include AR (family-specific)
-      const crRows = [];
-      const aa = fromCsv(idx, fam, "AA"); if (aa) { aa.item="CR"; crRows.push(aa); }
-      if (includeAR){
-        const qm = fromCsv(idx, fam, "QM"); if (qm) { qm.item="A/R"; crRows.push(qm); }
-      }
-      out.push(renderSimpleCard("CR","CR", crRows));
-
-      $cards.innerHTML = out.join("");
-    }
-
-    // events
-    document.getElementById("lensFamily").addEventListener("change", ()=>{ sessionStorage.removeItem(CACHE_KEY); run(); });
-    document.getElementById("lensTint").addEventListener("change", run);
-    document.getElementById("ar").addEventListener("change", run);
-    ["aspheric","oversize","glass","noOnly"].forEach(id=>document.getElementById(id).addEventListener("change", run));
-    document.getElementById("refresh").addEventListener("click", ()=>{ sessionStorage.removeItem(CACHE_KEY); run(); });
-    document.getElementById("clear").addEventListener("click", ()=>{ sessionStorage.clear(); document.getElementById("meta").textContent="cache cleared"; run(); });
-
-    run();
-  </script>
-</body>
-</html>
+              ${rows.
