--- a/index.html
+++ b/index.html
@@ -1,6 +1,318 @@
 <!doctype html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="0; url=app.html?v=1">
-<script>location.replace('app.html?v=1');</script>
-<noscript><a href="app.html?v=1">Go to Revopt</a></noscript>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <title>PayerEdge — VSP Bundles (v12.3)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <style>
+    :root{--bg:#0b0f14;--fg:#e7eefc;--muted:#9fb0c9;--card:#101722;--line:#233044;--ok:#10b981}
+    *{box-sizing:border-box}
+    body{background:var(--bg);color:var(--fg);font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,sans-serif;margin:0}
+    header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:16px 20px;border-bottom:1px solid #1b2535}
+    h1{font-size:18px;margin:0}
+    .meta{color:var(--muted);font-size:12px}
+    .row{display:flex;gap:12px;flex-wrap:wrap;padding:12px 20px}
+    .group{background:#0f1621;border:1px solid var(--line);border-radius:12px;padding:8px 10px;display:flex;gap:10px;align-items:center}
+    select{background:#152033;border:1px solid var(--line);color:var(--fg);padding:6px 10px;border-radius:8px}
+    .btn{background:#162130;border:1px solid var(--line);color:var(--fg);padding:8px 12px;border-radius:10px;cursor:pointer}
+    .cards{display:grid;grid-template-columns:repeat(4,minmax(260px,1fr));gap:14px;padding:0 20px 40px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:14px}
+    .card h2{margin:0 0 2px 0;font-size:32px}
+    .kicker{color:var(--muted);font-size:12px;margin-bottom:12px}
+    table{width:100%;border-collapse:collapse;font-size:13px}
+    th,td{padding:8px;border-top:1px solid #1b2535;text-align:left}
+    .right{text-align:right}
+    .muted{color:var(--muted)}
+    .ok{color:var(--ok)}
+    .banner{margin:12px 20px;background:#1a1320;border:1px dashed #6b4fa3;padding:10px 12px;border-radius:10px;display:none}
+    .small{font-size:12px}
+    @media(max-width:1200px){.cards{grid-template-columns:repeat(2,minmax(260px,1fr))}}
+    @media(max-width:700px){.cards{grid-template-columns:1fr}}
+  </style>
+</head>
+<body>
+  <header>
+    <div>
+      <h1>PayerEdge — VSP Bundles</h1>
+      <div class="meta">Scoreboard shows <b>patient copay</b> and <b>service fee</b> (Copay − Holdback). Sun choices are exclusive.</div>
+    </div>
+    <div style="display:flex;gap:8px;align-items:center">
+      <span class="meta">plan=<b id="planName">VSP_choice</b> • version=<b>v12.3</b> • source=<span id="src" class="muted">…</span></span>
+      <button class="btn" id="refresh">Force Refresh</button>
+      <button class="btn" id="clear">Clear Cache</button>
+    </div>
+  </header>
+
+  <div class="row">
+    <div class="group">
+      <span class="muted">Lens family</span>
+      <select id="lensFamily">
+        <option>Single Vision</option>
+        <option>Multifocal</option>
+      </select>
+    </div>
+    <div class="group">
+      <span class="muted">Lens tint</span>
+      <select id="lensTint">
+        <option>Clear</option>
+        <option>Solid</option>
+        <option>Gradient</option>
+        <option>Photochromic</option>
+        <option>Polarized</option>
+      </select>
+    </div>
+    <div class="group" style="gap:14px">
+      <label><input type="checkbox" id="ar" checked/> Include AR (tiered)</label>
+      <label><input type="checkbox" id="aspheric"/> Aspheric</label>
+      <label><input type="checkbox" id="oversize"/> Oversize</label>
+      <label><input type="checkbox" id="glass"/> Glass</label>
+      <label><input type="checkbox" id="noOnly"/> Custom measurements (N/O only)</label>
+    </div>
+    <div class="group"><span class="muted">[debug]</span> <span id="meta" class="meta">…</span></div>
+  </div>
+
+  <div id="net" class="banner"></div>
+  <div class="cards" id="cards"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <script>
+    /*************** CONFIG ***************/
+    const CSV_PATH = "./data/vsp_choice_master_v9_strict.csv";
+    const PLAN = "VSP_choice";
+    const CACHE_KEY = "payeredge_v12_cache";
+
+    const CARDS = [
+      {key:"Hi67", level:"Hi67", title:"Hi67"},
+      {key:"Mid",  level:"Mid",  title:"Mid"},
+      {key:"Poly", level:"Poly", title:"Poly"},
+      {key:"CR",   level:"CR",   title:"CR"}
+    ];
+
+    const $cards = document.getElementById("cards");
+    const $meta  = document.getElementById("meta");
+    const $net   = document.getElementById("net");
+    document.getElementById("src").textContent = CSV_PATH;
+
+    const money = n => `$${Number(n||0).toFixed(2).replace(/\.00$/,'')}`;
+
+    function famKey(raw){
+      const s = String(raw||"").toLowerCase();
+      if (s.startsWith("single")) return "SV";
+      if (s.startsWith("multi"))  return "MF";
+      return (s==="sv"||s==="mf") ? s.toUpperCase() : "SV";
+    }
+
+    /*************** CSV LOAD ***************/
+    function normRow(r){
+      const o = {};
+      for (const [k,v] of Object.entries(r)){
+        o[String(k).trim().toLowerCase()] = typeof v === "string" ? v.trim() : v;
+      }
+      const n = (k)=>{
+        const v = o[k];
+        if (v==null || v==="") return null;
+        const z = String(v).replace(/[^0-9.\-]/g,"");
+        return z===""? null : Number(z);
+      };
+      return {
+        plan: o.plan || "",
+        kind: (o.kind||"").toLowerCase(),
+        code: (o.code||"").toUpperCase(),
+        item: o.item || "",
+        family: (o.family||"BOTH").toUpperCase(),
+        material_level: (o.material_level||"—"),
+        sun: (o.sun||"—"),
+        exclusive_group: o.exclusive_group || "",
+        requires_flags: (o.requires_flags||"").toLowerCase().split(/\s*,\s*/).filter(Boolean),
+        forbids_flags: (o.forbids_flags||"").toLowerCase().split(/\s*,\s*/).filter(Boolean),
+        applies_to: (o.applies_to||"all").toLowerCase(),
+        pair_with: (o.pair_with||"").toUpperCase(),
+        copay_sv: n("copay_sv"),
+        holdback_sv: n("holdback_sv"),
+        copay_mf: n("copay_mf"),
+        holdback_mf: n("holdback_mf"),
+        notes: o.notes || ""
+      };
+    }
+
+    async function loadCsv(){
+      const cached = sessionStorage.getItem(CACHE_KEY);
+      if (cached){
+        const {rows, when} = JSON.parse(cached);
+        const nrows = rows.map(normRow);
+        $meta.textContent = `rows=${nrows.length} • cache ${(new Date(when)).toLocaleTimeString()}`;
+        return nrows;
+      }
+      try{
+        const res = await fetch(CSV_PATH, {cache:"no-store"});
+        if(!res.ok) throw new Error(`HTTP ${res.status}`);
+        const text = await res.text();
+        const parsed = Papa.parse(text, {header:true, skipEmptyLines:true});
+        const rows = parsed.data.map(normRow);
+        sessionStorage.setItem(CACHE_KEY, JSON.stringify({rows: parsed.data, when: Date.now()}));
+        $meta.textContent = `rows=${rows.length} • fresh`;
+        return rows;
+      }catch(e){
+        $net.style.display="block";
+        $net.textContent = "Network failed. Using cached data if available.";
+        const c2 = sessionStorage.getItem(CACHE_KEY);
+        if (c2){
+          const {rows} = JSON.parse(c2);
+          const r2 = rows.map(normRow);
+          $meta.textContent = `rows=${r2.length} • cache (offline)`;
+          return r2;
+        }
+        $meta.textContent = "rows=0 • offline";
+        return [];
+      }
+    }
+
+    /*************** RULES ***************/
+    function byPlan(rows, plan){
+      return rows.filter(r=> !r.plan || r.plan===plan);
+    }
+
+    function familyRowVal(row, fam){
+      if (fam === "SV") return {copay: row.copay_sv||0, hold: row.holdback_sv||0};
+      return {copay: row.copay_mf||0, hold: row.holdback_mf||0};
+    }
+
+    function flagsFromUI(){
+      return {
+        ar: document.getElementById("ar").checked,
+        aspheric: document.getElementById("aspheric").checked,
+        oversize: document.getElementById("oversize").checked,
+        glass: document.getElementById("glass").checked,
+        no_only: document.getElementById("noOnly").checked
+      };
+    }
+
+    function flagsAllow(row, flags){
+      for (const f of row.requires_flags){ if (!flags[f]) return false; }
+      for (const f of row.forbids_flags){ if (flags[f]) return false; }
+      return true;
+    }
+
+    function isPositiveSignalAddon(r){
+      if ((r.exclusive_group||"").trim()) return true;
+      const req = r.requires_flags||[];
+      return req.includes("ar") || req.includes("oversize") || req.includes("no_only") || req.includes("glass");
+    }
+
+    function pickExclusive(rows){
+      const winners = new Map();
+      const passthrough = [];
+      for (const r of rows){
+        const g = r.exclusive_group||"";
+        if (!g){ passthrough.push(r); continue; }
+        const prev = winners.get(g);
+        if (!prev){ winners.set(g, r); continue; }
+        const cA = (r.copay_sv||0)+(r.copay_mf||0);
+        const cB = (prev.copay_sv||0)+(prev.copay_mf||0);
+        if (cA > cB) winners.set(g, r);
+      }
+      return [...passthrough, ...winners.values()];
+    }
+
+    function bundleRows(rows, fam, level, tint, flags){
+      const rowsForFam = rows.filter(r=> r.family==="BOTH" || r.family===fam);
+
+      const pair = rowsForFam.find(r=> r.kind==="pair" && r.material_level===level && r.sun!=="Polarized");
+      const cr   = rowsForFam.find(r=> r.kind==="base" && r.code==="AA");
+
+      const addOnsAll = rowsForFam.filter(r=> r.kind==="addon" && isPositiveSignalAddon(r));
+      const addOns = addOnsAll.filter(r=> flagsAllow(r, flags) && (
+        r.sun==="Any" || r.sun==="—" || r.sun===tint
+      ));
+      const addOnsExclusive = pickExclusive(addOns);
+
+      return {pair, cr, addOns:addOnsExclusive};
+    }
+
+    function computeLines(row, fam){
+      const {copay, hold} = familyRowVal(row, fam);
+      const fee = (copay||0) - (hold||0);
+      return {copay, hold, fee};
+    }
+
+    function renderCard(title, mainRow, fam, breakdownExtra=[]){
+      if (!mainRow){
+        return `<div class="card"><div class="meta">Missing data for ${title}.</div></div>`;
+      }
+      const main = computeLines(mainRow, fam);
+      const extras = breakdownExtra.map(r=> ({row:r, lines: computeLines(r, fam)}));
+
+      const grand = extras.reduce((s,x)=>{
+        s.copay += (x.lines.copay||0);
+        s.hold  += (x.lines.hold||0);
+        s.fee   += (x.lines.fee||0);
+        return s;
+      }, {copay: main.copay, hold: main.hold, fee: main.fee});
+
+      const rowsHtml = [
+        {r: mainRow, l: main},
+        ...extras.map(x=>({r:x.row, l:x.lines}))
+      ].map(({r,l})=>`
+        <tr>
+          <td>${r.item}</td>
+          <td class="muted">${r.code}</td>
+          <td class="right">${money(l.copay)}</td>
+          <td class="right">${money(l.hold)}</td>
+          <td class="right">${money(l.fee)}</td>
+        </tr>`).join("");
+
+      return `
+        <div class="card">
+          <h2>${money(grand.copay)}</h2>
+          <div class="kicker">Patient Copay<br><span class="ok">Service Fee (Practice Profit): ${money(grand.fee)}</span></div>
+          <div class="meta" style="margin-bottom:6px">${title}</div>
+          <table>
+            <thead><tr><th>Item</th><th>Code</th><th class="right">Copay</th><th class="right">Holdback</th><th class="right">Service Fee</th></tr></thead>
+            <tbody>
+              ${rowsHtml}
+              <tr>
+                <td class="muted">Totals</td><td></td>
+                <td class="right"><b>${money(grand.copay)}</b></td>
+                <td class="right"><b>${money(grand.hold)}</b></td>
+                <td class="right"><b>${money(grand.fee)}</b></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>`;
+    }
+
+    async function run(){
+      const fam  = famKey(document.getElementById("lensFamily").value);
+      const tint = document.getElementById("lensTint").value;
+      const flags = flagsFromUI();
+
+      const rows = byPlan(await loadCsv(), PLAN);
+      if (!rows.length){ $cards.innerHTML = `<div class='meta' style='padding:20px'>No CSV rows found.</div>`; return; }
+
+      const out = [];
+      for (const c of CARDS){
+        const {pair, cr, addOns} = bundleRows(rows, fam, c.level, tint, flags);
+
+        if (c.level === "CR"){
+          if (!cr){ out.push(`<div class="card"><div class="meta">Missing AA (CR) row.</div></div>`); continue; }
+          out.push(renderCard("CR", cr, fam, addOns.filter(a=> a.applies_to!="bundle_only")));
+        } else {
+          if (!pair){ out.push(`<div class="card"><div class="meta">Missing pair for ${c.level}.</div></div>`); continue; }
+          out.push(renderCard(c.title, pair, fam, addOns.filter(a=> a.applies_to!="cr_only")));
+        }
+      }
+
+      $cards.innerHTML = out.join("");
+    }
+
+    // events
+    document.getElementById("lensFamily").addEventListener("change", ()=>{ sessionStorage.removeItem(CACHE_KEY); run(); });
+    document.getElementById("lensTint").addEventListener("change", run);
+    ["ar","aspheric","oversize","glass","noOnly"].forEach(id=> document.getElementById(id).addEventListener("change", run));
+    document.getElementById("refresh").addEventListener("click", ()=>{ sessionStorage.removeItem(CACHE_KEY); run(); });
+    document.getElementById("clear").addEventListener("click", ()=>{ sessionStorage.clear(); $meta.textContent="cache cleared"; run(); });
+
+    run();
+  </script>
+</body>
+</html>
